# CreateStory

./: .dockerignore  .env  .env.example  .gitcommitmsg.txt  .gitignore  Dockerfile  README.md  SKILL.md  __init__.py  alembic.ini  bootstrap_admin.py  debug_page_structure.py  docker-entrypoint.sh  index.html  main.py  package-lock.json  package.json  requirements.txt  settings.py  start_frontend.bat  test_metadata_speed.py  test_metadata_update_unit.py  updateFE.bat  vite.config.ts  vitest.config.ts
CreateStory_FE/: THIRD_PARTY_NOTICES.md  package-lock.json  package.json  start_fe.bat  tailwind.config.js  updateFE.bat  vercel.json
Services/: .env.example  .gitignore  README.md  Taskfile.yml  docker-compose.ci.yml  docker-compose.legacy-db.yml  docker-compose.yml  export_services.bat  nginx-frontend.conf  setup_admin.bat  setup_secrets.bat  setup_secrets.ps1  task.ps1  (+4 more)
Services/AutoAudio/: .env.example  Dockerfile  docker-entrypoint.sh  main.py  pyproject.toml
Services/AutoAudio/alembic/: env.py
Services/AutoAudio/alembic/versions/: 0001_auto_audio_baseline.py  0003_auto_audio_settings.py
Services/AutoAudio/api/: service_auth.py
Services/AutoAudio/api/models/: auto_audio.py
Services/AutoAudio/api/routes/: auto_audio.py
Services/AutoAudio/core/: config.py  db.py  dev_reset.py  models.py  repositories.py  service.py
Services/AutoAudio/core/orchestrator/: batch.py  session.py
Services/AutoAudio/core/services/: bedread_client.py  external_api.py  upload.py
Services/AutoAudio/tests/: test_batch_poller.py  test_dev_reset.py  test_owned_settings.py
(+676 files in other folders)
