[project]
name = "autoaudio"
version = "1.0.0"
description = "Auto-audio orchestration microservice — discovers stories with missing audio and auto-generates TTS via BedReadVoices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.uv]
package = true

[tool.uv.pip-tools]
